--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,13 @@
 .App {
   text-align: center;
+  background-color: black;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
 
 .App-header {
   min-height: 100vh;
@@ -23,7 +19,7 @@
 }
 
 .App-link {
-  color: rgb(112, 76, 182);
+  color: rgb(236, 202, 47);
 }
 
 @keyframes App-logo-float {
@@ -36,4 +32,8 @@
   100% {
     transform: translateY(0px);
   }
+}
+
+.Coming-soon {
+  color: rgb(236, 202, 47);
 }
