--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,9 @@
 
 .App-link {
   color: rgb(184, 152, 13);
-  padding-right: 40px;
+  padding-right: 20px;
+  padding-left:20px;
+  font-size: calc(10px + 2vmin);
 }
 
 @keyframes App-logo-float {
@@ -41,5 +43,6 @@
 
 .temp-home-links {
   color: rgb(184, 152, 13);
-  padding-top: 70px;
+  padding-top: 30px;
+
 }
