--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 .App {
   text-align: center;
   background-color: black;
+  min-height: 100vh;
 }
 
 .App-logo {
   height: 20vmin;
+  pointer-events: none;
+}
+
+.App-logo-nav {
+  height: 5vmin;
   pointer-events: none;
 }
 
@@ -46,3 +52,4 @@
   padding-top: 30px;
 
 }
+
